--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 	      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
 	    <![endif]-->
 	  <link rel="stylesheet" href="static/layui/css/layui.css" />
+		<link rel="stylesheet" href="static/layui/css/modules/layer/default/layer.css"/>
 <!--		<link rel="stylesheet" href="static/css/register.css" />-->
   </head>
   <body>
   	<div id="app"></div>
+		<script src="static/layui/layui.js"></script>
+		<script src="static/layui/lay/modules/jquery.js"></script>
+		<script src="static/layui/lay/modules/layer.js"></script>
   </body>
 </html>
 <!--<!DOCTYPE html>
